--- a/action.yml
+++ b/action.yml
@@ -11,6 +11,12 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
     - run: chmod +x ./scripts/get_env.sh && ./scripts/get_env.sh
       shell: bash
       env:
